Signed-off-by: signifox <signifox@gmail.com>

--- a/_posts/2013-01-19-gdb-help.md
+++ b/_posts/2013-01-19-gdb-help.md
@@ -676,3 +676,6 @@ gdb user-commands support
 ###References
 
     gdb manual - online HTML version - http://sourceware.org/gdb/current/onlinedocs/gdb_toc.html 
+
+###不传之密，传男不传女
+    栈溢出了怎么办，堆栈信息损坏怎么办，x /100bs $rsp 查看栈指针信息，帮你解决后顾之忧。
